test/files/neg/xmltruncated1.check
xmltruncated1.scala:2: error: input ended while parsing XML
  val stuff = <a>
                 ^
one error found
